--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~8.2.7",
     "@angular/platform-browser-dynamic": "~8.2.7",
     "@angular/router": "~8.2.7",
+    "@auth0/angular-jwt": "^4.0.0",
     "moment": "^2.24.0",
     "ng2-currency-mask": "^5.3.1",
     "ng2-toasty": "^4.0.3",
