--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "angular2-jwt": "^0.2.3",
     "codelyzer": "~3.0.1",
     "core-js": "^2.4.1",
+    "express-force-https": "^1.0.0",
     "font-awesome": "^4.7.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
