--- a/package.json
+++ b/package.json
@@ -30,11 +30,12 @@
     "ng2-toasty": "^4.0.3",
     "primeicons": "^1.0.0-beta.7",
     "primeng": "^6.0.0-beta.1",
-    "rxjs": "^6.2.1",
+    "rxjs": "^6.0.0",
     "rxjs-compat": "^6.2.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.6.8",
     "@angular/cli": "6.0.8",
     "@angular/compiler-cli": "6.0.4",
     "@angular/language-service": "6.0.4",
@@ -52,8 +53,7 @@
     "protractor": "~5.1.2",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "2.7.2",
-    "@angular-devkit/build-angular": "~0.6.8"
+    "typescript": "^2.7.2"
   },
   "engines": {
     "node": "8.1.2",
