--- a/package.json
+++ b/package.json
@@ -12,48 +12,47 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "6.0.4",
-    "@angular/common": "6.0.4",
-    "@angular/compiler": "6.0.4",
-    "@angular/core": "6.0.4",
-    "@angular/forms": "6.0.4",
-    "@angular/http": "6.0.4",
-    "@angular/platform-browser": "6.0.4",
-    "@angular/platform-browser-dynamic": "6.0.4",
-    "@angular/router": "6.0.4",
-    "@auth0/angular-jwt": "^2.0.0",
+    "@angular/animations": "8.2.14",
+    "@angular/cdk": "^8.2.3",
+    "@angular/common": "8.2.14",
+    "@angular/compiler": "8.2.14",
+    "@angular/core": "8.2.14",
+    "@angular/forms": "8.2.14",
+    "@angular/platform-browser": "8.2.14",
+    "@angular/platform-browser-dynamic": "8.2.14",
+    "@angular/router": "8.2.14",
+    "@auth0/angular-jwt": "^3.0.1",
     "chart.js": "^2.7.2",
-    "core-js": "^2.4.1",
+    "core-js": "^3.6.4",
     "font-awesome": "^4.7.0",
     "moment": "^2.18.1",
-    "ng2-currency-mask": "^4.1.0",
+    "ng2-currency-mask": "^5.3.1",
     "ng2-toasty": "^4.0.3",
-    "primeicons": "^1.0.0-beta.7",
-    "primeng": "^6.0.0-beta.1",
-    "rxjs": "^6.0.0",
-    "rxjs-compat": "^6.2.1",
-    "zone.js": "^0.8.26"
+    "primeicons": "^2.0.0",
+    "primeng": "^8.1.1",
+    "rxjs": "^6.5.4",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.8",
-    "@angular/cli": "6.0.8",
-    "@angular/compiler-cli": "6.0.4",
-    "@angular/language-service": "6.0.4",
-    "@types/jasmine": "~2.8.3",
+    "@angular-devkit/build-angular": "^0.803.25",
+    "@angular/cli": "8.3.19",
+    "@angular/compiler-cli": "8.2.14",
+    "@angular/language-service": "8.2.14",
+    "@types/jasmine": "^3.5.7",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
-    "codelyzer": "^4.0.1",
-    "jasmine-core": "~2.8.0",
+    "@types/node": "^12.12.29",
+    "codelyzer": "^5.2.1",
+    "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
-    "ts-node": "~4.1.0",
-    "tslint": "~5.9.1",
-    "typescript": "^2.7.2"
+    "karma": "^4.0.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "^2.1.1",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.5.2",
+    "protractor": "^5.4.3",
+    "ts-node": "^8.5.4",
+    "tslint": "~5.20.1",
+    "typescript": "^3.4.5"
   },
   "engines": {
     "node": "8.1.2",
