--- a/package.json
+++ b/package.json
@@ -31,9 +31,7 @@
     "primeicons": "^2.0.0",
     "primeng": "^8.1.1",
     "rxjs": "^6.5.4",
-    "zone.js": "~0.9.1"
-  },
-  "devDependencies": {
+    "zone.js": "~0.9.1",
     "@angular-devkit/build-angular": "^0.803.25",
     "@angular/cli": "8.3.19",
     "@angular/compiler-cli": "8.2.14",
@@ -53,6 +51,8 @@
     "ts-node": "^8.5.4",
     "tslint": "~5.20.1",
     "typescript": "^3.4.5"
+  },
+  "devDependencies": {
   },
   "engines": {
     "node": "12.13.0",
