--- a/package.json
+++ b/package.json
@@ -13,34 +13,29 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "^0.803.25",
     "@angular/animations": "8.2.14",
     "@angular/cdk": "^8.2.3",
+    "@angular/cli": "8.3.19",
     "@angular/common": "8.2.14",
     "@angular/compiler": "8.2.14",
+    "@angular/compiler-cli": "8.2.14",
     "@angular/core": "8.2.14",
     "@angular/forms": "8.2.14",
+    "@angular/language-service": "8.2.14",
     "@angular/platform-browser": "8.2.14",
     "@angular/platform-browser-dynamic": "8.2.14",
     "@angular/router": "8.2.14",
     "@auth0/angular-jwt": "^3.0.1",
-    "chart.js": "^2.7.2",
-    "core-js": "^3.6.4",
-    "font-awesome": "^4.7.0",
-    "moment": "^2.18.1",
-    "ng2-currency-mask": "^5.3.1",
-    "ng2-toasty": "^4.0.3",
-    "primeicons": "^2.0.0",
-    "primeng": "^8.1.1",
-    "rxjs": "^6.5.4",
-    "zone.js": "~0.9.1",
-    "@angular-devkit/build-angular": "^0.803.25",
-    "@angular/cli": "8.3.19",
-    "@angular/compiler-cli": "8.2.14",
-    "@angular/language-service": "8.2.14",
     "@types/jasmine": "^3.5.7",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "^12.12.29",
+    "chart.js": "^2.7.2",
     "codelyzer": "^5.2.1",
+    "core-js": "^3.6.4",
+    "express": "^4.17.1",
+    "express-force-https": "^1.0.0",
+    "font-awesome": "^4.7.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.0.0",
@@ -48,13 +43,19 @@
     "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.5.2",
+    "moment": "^2.18.1",
+    "ng2-currency-mask": "^5.3.1",
+    "ng2-toasty": "^4.0.3",
+    "primeicons": "^2.0.0",
+    "primeng": "^8.1.1",
     "protractor": "^5.4.3",
+    "rxjs": "^6.5.4",
     "ts-node": "^8.5.4",
     "tslint": "~5.20.1",
-    "typescript": "^3.4.5"
+    "typescript": "^3.4.5",
+    "zone.js": "~0.9.1"
   },
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "engines": {
     "node": "12.13.0",
     "npm": "5.0.3"
